--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
 						</br></br></br></br></br>
 						<!-- xs-widnow-wraper -->
 						<ul class="xs-info-list">
-								<li><i class="fa fa-home bg-red"></i>JL. Brigjend Zein Hamid , Gg. Keluarga No. 10, Medan, Sumatera Utara 20217, Indonesia.</li>
+								<li><i class="fa fa-home bg-red"></i>JL. Brigjend Zein Hamid , Gg. Keluarga No. 10, Medan, Sumatera Utara, Indonesia.</li>
 								<li><i class="fa fa-phone bg-green"></i>(WA) +62813.7566.7254 atau </br> (Phone) +62813.97720.212</li></br>
 								<li><i class="fa fa-envelope-o bg-blue"></i><a href="mailto:kopasude@gmail.com">kopasude@gmail.com</a></li>
 							</ul><!-- .xs-list-with-icon END -->
